[workspace]
members = ["crates/*", "bin/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
# Internal dependencies
core = { path = "crates/core" }
leetcode = { path = "crates/leetcode" }
nano-fonts = { path = "crates/nano-fonts" }

# External dependencies
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
futures = { version = "0.3.30", features = ["executor"] }
