[workspace]
members = ["crates/*", "bin/*"]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
# Internal dependencies
error = { path = "crates/error" }
core = { path = "crates/core" }
leetcode = { path = "crates/leetcode" }
nano-fonts = { path = "crates/nano-fonts" }
workers = { path = "crates/workers" }

# External dependencies
reqwest = { version = "0.11.22" }
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt", "rt-multi-thread", "macros"] }
woff2 = { version = "0.1.0", git = "https://github.com/thibault-cne/woff2" }
base64 = "0.21.7"
serde_json = "1.0.113"
worker = "0.0.18"
wee_alloc = "0.4.5"
